<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorAccent"
    style="@style/headerTextPrimary"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingLeft="15dp"
    android:paddingBottom="15dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/hotel_building"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_moto"
        android:textColor="#FFFFFF"
       android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>