<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".ProfileActivity">
<ScrollView
    style="@style/parent">

    <RelativeLayout
        style="@style/parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:weightSum="12"
            android:baselineAligned="false">

            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="@string/iv_login_background" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">


            <TextView
                style="@style/headerText"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_marginTop="10dp"/>
            <TextView
                style="@style/headerText"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/profile"
                android:textColor="#000000">

            </TextView>

            <include
                layout="@layout/activity_profile"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

    </RelativeLayout>